# releasewave

./: .gitignore  .rwave.yml.example  LICENSE  README.md  action.yml  prd.md  pyproject.toml
.github/workflows/: release-notes.yml
examples/: CHANGELOG-developer.md  RELEASE-NOTES.md  TWEET.txt
releasewave/: __init__.py  chunker.py  cli.py  config.py  git_ops.py  llm.py  models.py  output.py  prompts.py
tests/: __init__.py  test_chunker.py  test_config.py  test_git_ops.py  test_llm.py  test_models.py  test_prompts.py
